# strands-voice-chat-samples

./: .gitignore  INSTALL.md  MIGRATION.md  QUICKSTART.md  README.md  agent.py  example_new_api.py  pyproject.toml  requirements.txt  setup.sh
docs/: index.html
tools/: speech_to_speech.py  voice_chat_server.py
